--- a/public/GI-NUT-BOLT-supplier-in-tamil-nadu.html
+++ b/public/GI-NUT-BOLT-supplier-in-tamil-nadu.html
@@ -193,7 +193,7 @@
             style="background-image: url('https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/hero%20images%2FPRODUCT-PAGE-HERO-IMAGES%2Fbuilding.webp?alt=media&token=f0d10a8c-152f-46ce-aa61-3a34dcafb98b');">
             <div class="hero-wrapper">
                 <div class="hero-content">
-                    <h1 data-aos="fade-down" data-aos-delay="450">Leading Supplier of <span>Anchor Fasteners</span>
+                    <h1 data-aos="fade-down" data-aos-delay="450">Leading Supplier of <span>GI Fasteners</span>
                         in Tamil Nadu
                     </h1>
                     <div class="cta-buttons" data-aos="fade-down" data-aos-delay="450">
@@ -202,11 +202,11 @@
                                 alt="WhatsApp" />
                             WhatsApp
                         </a>
-                        <a href="tel:+919003072883" class="btn call-btn">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(3).png?alt=media&token=9a9183ca-6fc0-48ca-a604-5f50afda2da7"
-                                alt="Call" />
-                            Quick Call
-                        </a>
+                            <a href="tel:+919003072883" class="btn call-btn">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(1)%201.png?alt=media&token=d3b335c6-69c1-4372-9ef7-e2693f7e0bf9"
+                                    alt="Call" />
+                                Quick Call
+                            </a>
                     </div>
                 </div>
             </div>
