--- a/public/HILLSIDE-WASHER-supplier-in-tamil-nadu.html
+++ b/public/HILLSIDE-WASHER-supplier-in-tamil-nadu.html
@@ -196,11 +196,11 @@
                                 alt="WhatsApp" />
                             WhatsApp
                         </a>
-                        <a href="tel:+919003072883" class="btn call-btn">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(3).png?alt=media&token=9a9183ca-6fc0-48ca-a604-5f50afda2da7"
-                                alt="Call" />
-                            Quick Call
-                        </a>
+                            <a href="tel:+919003072883" class="btn call-btn">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(1)%201.png?alt=media&token=d3b335c6-69c1-4372-9ef7-e2693f7e0bf9"
+                                    alt="Call" />
+                                Quick Call
+                            </a>
                     </div>
                 </div>
             </div>
