--- a/public/ANCHOR-FASTENERS-supplier-in-tamil-nadu.html
+++ b/public/ANCHOR-FASTENERS-supplier-in-tamil-nadu.html
@@ -51,6 +51,7 @@
     <!-- Your Main Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-page-styles.css">
+
 </head>
 
 <body>
@@ -194,11 +195,11 @@
                                 alt="WhatsApp" />
                             WhatsApp
                         </a>
-                            <a href="tel:+919003072883" class="btn call-btn">
-                                <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(1)%201.png?alt=media&token=d3b335c6-69c1-4372-9ef7-e2693f7e0bf9"
-                                    alt="Call" />
-                                Quick Call
-                            </a>
+                        <a href="tel:+919003072883" class="btn call-btn">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/static%20icons%2Ftelephone%20(1)%201.png?alt=media&token=d3b335c6-69c1-4372-9ef7-e2693f7e0bf9"
+                                alt="Call" />
+                            Quick Call
+                        </a>
                     </div>
                 </div>
             </div>
@@ -318,7 +319,8 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>We offer Wedge Type Anchor Bolts, Rawal Type Anchor Fasteners, Bolt Type Anchor Fasteners, Shell type Anchor Fasteners, andPin Type Anchor Fasteners to meet various industrial
+                        <p>We offer Wedge Type Anchor Bolts, Rawal Type Anchor Fasteners, Bolt Type Anchor Fasteners,
+                            Shell type Anchor Fasteners, andPin Type Anchor Fasteners to meet various industrial
                             and construction needs.</p>
                     </div>
                 </div>
@@ -361,49 +363,50 @@
         </section>
 
         <!-- Optional: FAQ Schema for SEO -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "FAQPage",
-  "mainEntity": [
-    {
-      "@type": "Question",
-      "name": "What types of anchor fasteners are available?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "We offer Wedge Type Anchor Bolts, Rawal Type Anchor Fasteners, Bolt Type Anchor Fasteners, Shell Type Anchor Fasteners, and Pin Type Anchor Fasteners to meet various industrial and construction needs."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "What grades of Anchor Fasteners are available?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "Our bolts are available in grades 4.6, 8.8, and other custom grades based on client requirements."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "What is the HSN code for Anchor Fasteners?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "The HSN code for anchor fasteners is 7318, which covers screws, bolts, nuts, and similar articles of iron or steel."
-      }
-    },
-    {
-      "@type": "Question",
-      "name": "Where is the best place to buy anchor fasteners in Tamil Nadu?",
-      "acceptedAnswer": {
-        "@type": "Answer",
-        "text": "SF Hardware is your trusted supplier for high-quality anchor fasteners in Tamil Nadu, offering competitive pricing, reliable service, and a wide range of options."
-      }
-    }
-  ]
-}
-</script>
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "FAQPage",
+                "mainEntity": [{
+                        "@type": "Question",
+                        "name": "What types of anchor fasteners are available?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "We offer Wedge Type Anchor Bolts, Rawal Type Anchor Fasteners, Bolt Type Anchor Fasteners, Shell Type Anchor Fasteners, and Pin Type Anchor Fasteners to meet various industrial and construction needs."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "What grades of Anchor Fasteners are available?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "Our bolts are available in grades 4.6, 8.8, and other custom grades based on client requirements."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "What is the HSN code for Anchor Fasteners?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "The HSN code for anchor fasteners is 7318, which covers screws, bolts, nuts, and similar articles of iron or steel."
+                        }
+                    },
+                    {
+                        "@type": "Question",
+                        "name": "Where is the best place to buy anchor fasteners in Tamil Nadu?",
+                        "acceptedAnswer": {
+                            "@type": "Answer",
+                            "text": "SF Hardware is your trusted supplier for high-quality anchor fasteners in Tamil Nadu, offering competitive pricing, reliable service, and a wide range of options."
+                        }
+                    }
+                ]
+            }
+        </script>
 
 
 
+
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
