--- a/public/Fasteners-For-Bridge-Manufacturing.html
+++ b/public/Fasteners-For-Bridge-Manufacturing.html
@@ -752,7 +752,7 @@
             }
         </script>
 
-
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
