--- a/public/Fasteners-For-Industrial-Shed-Construction.html
+++ b/public/Fasteners-For-Industrial-Shed-Construction.html
@@ -1010,7 +1010,9 @@
 
 
 
-            <footer>
+            <button id="shareBtn" class="btn-share-outline">Share</button>
+
+        <footer>
                 <div id='logoDiv'>
                     <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20White.png?alt=media&token=ffb1752f-3a5f-462d-9a2e-29cda100536f"
                         alt="sf-hardware-logo">
