--- a/public/Fasteners-For-Chimney-Manufacturing.html
+++ b/public/Fasteners-For-Chimney-Manufacturing.html
@@ -757,7 +757,7 @@
             }
         </script>
 
-
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
