--- a/public/Fasteners-For-Precast-Concrete-Structures.html
+++ b/public/Fasteners-For-Precast-Concrete-Structures.html
@@ -762,7 +762,7 @@
             }
         </script>
 
-
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
