--- a/public/GOLDEN-YELLOW-PLATING-FASTENERS-supplier-in-chennai.html
+++ b/public/GOLDEN-YELLOW-PLATING-FASTENERS-supplier-in-chennai.html
@@ -59,6 +59,7 @@
     <!-- Your Main Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-page-styles.css">
+
 </head>
 
 <body>
@@ -394,6 +395,8 @@
             }
         </script>
 
+
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
