--- a/public/HOT-DIP-GALVANIZED-BOLTS-AND-NUTS-supplier-in-tamil-nadu.html
+++ b/public/HOT-DIP-GALVANIZED-BOLTS-AND-NUTS-supplier-in-tamil-nadu.html
@@ -55,6 +55,7 @@
     <!-- Your Main Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-page-styles.css">
+
 </head>
 
 
@@ -392,6 +393,8 @@
 </script>
 
 
+
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
