--- a/public/MS-NUT-BOLT-supplier-in-tamil-nadu.html
+++ b/public/MS-NUT-BOLT-supplier-in-tamil-nadu.html
@@ -53,6 +53,7 @@
     <!-- Your Main Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-page-styles.css">
+
 </head>
 
 <body>
@@ -372,7 +373,7 @@
             }
         </script>
 
-
+        <button id="shareBtn" class="btn-share-outline">Share</button>
 
         <footer>
             <div id='logoDiv'>
