--- a/public/TAPER-WASHER-supplier-in-chennai.html
+++ b/public/TAPER-WASHER-supplier-in-chennai.html
@@ -53,6 +53,7 @@
     <!-- Your Main Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-page-styles.css">
+
 </head>
 
     <body>
@@ -401,7 +402,9 @@
             </script>
 
 
-            <footer>
+            <button id="shareBtn" class="btn-share-outline">Share</button>
+
+        <footer>
                 <div id='logoDiv'>
                     <img src="https://firebasestorage.googleapis.com/v0/b/sfhardware-5253.appspot.com/o/SF%20Logo%20White.png?alt=media&token=ffb1752f-3a5f-462d-9a2e-29cda100536f"
                         alt="sf-hardware-logo">
